force-app/src/objects/TR1__Reference__c.object
<CustomObject>
    <fields>
        <fullName>Adapt_Well__c</fullName>
        <description>Original question &quot;Would adapt well to a diverse teaching environment and culture&quot; was changed by SSE and C&amp;R on 21 March.</description>
        <inlineHelpText>Able to adapt to a diverse teaching environment; demonstrates an appreciation for other cultures</inlineHelpText>
        <label>Adapt Well</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_behaved_inappropriately__c</fullName>
        <inlineHelpText>If yes, please provide more details here.</inlineHelpText>
        <label>Answer behaved inappropriately</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Behaved_inappropriately__c</fullName>
        <inlineHelpText>To the best of your knowledge, has the candidate ever behaved inappropriately with children?</inlineHelpText>
        <label>Behaved inappropriately</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Contact_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS Contact Application</label>
        <referenceTo>CIS_Contact_Application__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>TR1__Person_Placed__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaborates__c</fullName>
        <inlineHelpText>Collaborates with interdependent professional colleagues and works as team player</inlineHelpText>
        <label>Collaborates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commited_Division__c</fullName>
        <inlineHelpText>Committed to the shared vision and values of the school</inlineHelpText>
        <label>Commited Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constructs__c</fullName>
        <inlineHelpText>Constructs intellectually challenging learning experiences</inlineHelpText>
        <label>Constructs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_pedagogy__c</fullName>
        <inlineHelpText>Uses current pedagogy for high levels of learning</inlineHelpText>
        <label>Current pedagogy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engages__c</fullName>
        <inlineHelpText>Engages all learners by using a variety of strategies and techniques</inlineHelpText>
        <label>Engages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <description>Unique ID to upsert the references data.</description>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fairness__c</fullName>
        <description>The original question &quot;Displays a sense of fairness and honesty&quot; was changed by SSE and C&amp;R on 21 March 2018. The field label was edited to reflect the new question as shown in &quot;Help Text&quot; field.</description>
        <inlineHelpText>Displays strong ethics and professional behavior.</inlineHelpText>
        <label>Ethics and Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_comments__c</fullName>
        <label>Further comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handle_problems__c</fullName>
        <description>Original question &quot;Handles problems with tact and skill&quot; was changed by SSE and C&amp;R on 21 March 2018</description>
        <inlineHelpText>Solves problems with tact and skill</inlineHelpText>
        <label>Handle problems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_supervise_candidate__c</fullName>
        <label>How long supervise candidate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_process_or_investigation__c</fullName>
        <inlineHelpText>To the best of your knowledge, has the candidate ever been spoken to as part of an internal inquiry process or a police investigation?</inlineHelpText>
        <label>Inquiry process or investigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspires__c</fullName>
        <inlineHelpText>Inspires respect and enthusiasm in students</inlineHelpText>
        <label>Inspires</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrates__c</fullName>
        <inlineHelpText>Integrates information and communication technologies to enhance learning</inlineHelpText>
        <label>Integrates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledgable__c</fullName>
        <description>Original question &quot;Is knowledgeable and current in areas of subject speciality&quot; was changed by SSE and C&amp;R on 21 March 2018</description>
        <inlineHelpText>Demonstrates leading practices in areas of expertise</inlineHelpText>
        <label>Knowledgable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_SG__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/Reference-Request?Id=&quot;&amp; RecordId__c , &quot;Click here&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference link Survey Gizmo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partnerships__c</fullName>
        <inlineHelpText>Builds learning partnerships with parents and effectively communicates goals and expectations for students</inlineHelpText>
        <label>Partnerships</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_employ_this_candidate__c</fullName>
        <inlineHelpText>Would you re-employ this candidate without hesitation?</inlineHelpText>
        <label>Re-employ this candidate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Email__c</fullName>
        <label>Referee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referee_Name__c</fullName>
        <inlineHelpText>IMPORTANT: We will begin to contact your references as soon as you add their details and save your form to expedite the screening process. Please do contact them in advance to inform them of your search and alert them to our impending contact.</inlineHelpText>
        <label>Referee Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Form_link__c</fullName>
        <label>Reference Form link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference_email_send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference email send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_link__c</fullName>
        <description>New link</description>
        <label>Reference link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reflects__c</fullName>
        <inlineHelpText>Reflects to improve practice</inlineHelpText>
        <label>Reflects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relation_to_candidate__c</fullName>
        <inlineHelpText>Professional relationship to candidate</inlineHelpText>
        <label>Relation to candidate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <label>School Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Organisation__c</fullName>
        <label>School/Organisation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Document__c</fullName>
        <description>Additional supporting documents submitted by referee</description>
        <label>Supporting Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Areas_for_Improvement__c</fullName>
        <label>Areas for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Hire_Again__c</fullName>
        <label>Hire Again</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Candidate Salesforce ID</inlineHelpText>
        <label>Person Placed</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Referee__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References (Referee)</relationshipLabel>
        <relationshipName>References1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Relationship__c</fullName>
        <label>Relationship</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Relationship_with_Peers_Supervisors__c</fullName>
        <label>Relationship with Peers/Supervisors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Suitability_for_Position__c</fullName>
        <label>Suitability for Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Technical_Ability__c</fullName>
        <label>Technical Ability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Peer</fullName>
                </value>
                <value>
                    <fullName>Subordinate</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Educator Recruitment</fullName>
                    <label>Educator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Dataload</description>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Outside_Classroom__c</fullName>
        <inlineHelpText>Willingly contributes time outside the classroom to co-curricular school activities</inlineHelpText>
        <label>Time Outside Classroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Number__c</fullName>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>answer_Inquiry_process_or_investigation__c</fullName>
        <inlineHelpText>If yes, please provide more details here.</inlineHelpText>
        <label>Answer Inquiry process or investigation</label>
        <type>TextArea</type>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>Reference_without_link</fullName>
        <columns>NAME</columns>
        <columns>TR1__Person_Placed__c</columns>
        <columns>Reference_link__c</columns>
        <columns>Referee_Name__c</columns>
        <columns>Referee_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_link__c</field>
            <operation>equals</operation>
        </filters>
        <label>Reference without link</label>
    </listViews>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>TR1__Person_Placed__c</columns>
        <columns>Referee_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>